# cricket-data

./: .gitignore  .sqlfluff  README.md  README_NARRATIVE.md  dbt_project.yml  pyproject.toml  pytest.ini
analyses/: england-runs.R  venues.sql
docs/: data-quality-issues.md  example_json_blob_raw.json  example_json_innings.json  prompt_improvements.md
macros/: nation_type.sql  raw_paths.sql
models/marts/: dim_players.sql  dim_venues.sql  fct_batter_innings.sql  fct_batter_innings_enhanced.sql  fct_bowler_innings.sql  schema.yml  schema_enhanced.yml  test_fct_bowler_innings.yml
models/staging/: schema.yml  stg_cricket__deliveries.sql  stg_cricket__innings.sql  stg_cricket__matches.sql  stg_cricket__narratives.sql  stg_cricket__raw_json.sql
scripts/python/: MATCH_NARRATIVES.md  batch_match_descriptions.py  batch_match_descriptions_api.py  check_cricsheet_updates.py  enrich_venue_seed_with_gemini.py  generate_match_narrative.py  list_gemini_models.py  quick-commands.sh  sync_venue_master_mapping.py  test_gemini_connection.py
scripts/python/narratives/: __init__.py
scripts/python/narratives/prompts/: __init__.py  match_prompt.py
scripts/python/narratives/prompts/text/: cricket_context.md  examples_brief.md  examples_full.md  relaxed_brief_instructions.md  relaxed_full_instructions.md  response_schema_brief.md  (+3 more)
scripts/r/: connect.R  disconnect.R
scripts/sql/: rebuild_venue_seed.sql
seeds/: venue_alias_mapping.csv  venue_country_mapping.csv  venue_master_mapping.csv
tests/: README_TESTS.md  test_check_cricsheet_updates.py  test_generate_match_narrative.py
